--- a/structuretest.html
+++ b/structuretest.html
@@ -21,6 +21,7 @@
                 width: 100%;
                 background-color: yellowgreen;
                 text-align: center;
+                padding-top: 50px;
             }
             #bottomsection{
                 overflow: hidden;
@@ -46,6 +47,10 @@
             h5{
                 margin-top: 0px;
             }
+
+            img{
+                width: 80px;
+            }
         </style>
 </head>
 <body>
@@ -54,15 +59,15 @@
         <div id="bottomsection">
             <div id="leftsection">
                 <a href="#" class="mylink">
-                    <img src="course.png" alt="golf course" />
+                    <img src="http://payload207.cargocollective.com/1/13/424402/6442776/VIV12511-Flower_Illustration-06-2-16.jpg" alt="golf course" />
                     <span>see course</span>
                 </a>
                 <a href="#" class="mylink">
-                    <img src="course.png" alt="golf course" />
+                    <img src="http://payload207.cargocollective.com/1/13/424402/6442776/VIV12511-Flower_Illustration-06-2-16.jpg" alt="golf course" />
                     <span>see course</span>
                 </a>
                 <a href="#" class="mylink">
-                    <img src="course.png" alt="golf course" />
+                    <img src="http://payload207.cargocollective.com/1/13/424402/6442776/VIV12511-Flower_Illustration-06-2-16.jpg" alt="golf course" />
                     <span>see course</span>
                 </a>
 
