--- a/structuretest.html
+++ b/structuretest.html
@@ -42,6 +42,14 @@
 
             a{
                 display: block;
+                width: 100%;
+                float: left;
+                padding: 10px;
+                border-bottom: 1px solid black;
+            }
+            a span{
+                float: left;
+                padding: 12px;
             }
 
             h5{
@@ -50,7 +58,9 @@
 
             img{
                 width: 80px;
+                float: left;
             }
+
         </style>
 </head>
 <body>
@@ -58,17 +68,17 @@
         <div id="hero">This is the hero container</div>
         <div id="bottomsection">
             <div id="leftsection">
-                <a href="#" class="mylink">
+                <a href="anotherindex.html" class="mylink" title="this doesn't exist yet">
                     <img src="http://payload207.cargocollective.com/1/13/424402/6442776/VIV12511-Flower_Illustration-06-2-16.jpg" alt="golf course" />
-                    <span>see course</span>
+                    <span>About Me</span>
                 </a>
-                <a href="#" class="mylink">
+                <a href="index.html" class="mylink">
                     <img src="http://payload207.cargocollective.com/1/13/424402/6442776/VIV12511-Flower_Illustration-06-2-16.jpg" alt="golf course" />
-                    <span>see course</span>
+                    <span>Tron Test</span>
                 </a>
-                <a href="#" class="mylink">
+                <a href="http://www.google.com" class="mylink">
                     <img src="http://payload207.cargocollective.com/1/13/424402/6442776/VIV12511-Flower_Illustration-06-2-16.jpg" alt="golf course" />
-                    <span>see course</span>
+                    <span>Go to Google</span>
                 </a>
 
 
