committing table and css sheet

--- a/anotherindex.html
+++ b/anotherindex.html
@@ -2,10 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Listing of Employees</title>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
 
 </head>
 <body>
-Here's a test script :D
+
+    <table border="1">
+        <caption> Listing of Employees</caption>
+        <thead>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Title</th>
+            <th>Start Date</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Brad</td>
+                <td>Miller</td>
+                <td>Developer</td>
+                <td class="rightalign">4/15/2006</td>
+            </tr>
+            <tr>
+                <td>Ben</td>
+                <td>Sanders</td>
+                <td>QA</td>
+                <td class="rightalign">10/1/1999</td>
+            </tr>
+            <tr>
+                <td>Marcia</td>
+                <td>Ball</td>
+                <td>QA</td>
+                <td class="rightalign">5/10/1981</td>
+            </tr>
+            <tr>
+                <td>Leslie</td>
+                <td>Wooley</td>
+                <td>Project Manager</td>
+                <td class="rightalign">4/11/1993</td>
+            </tr>
+        </tbody>
+
+
+        <tfoot>
+            <tr>
+                <td colspan="4">
+                    All characters appearing in this work are ficticious. Any resemblance to real persons, living or dead, is purely coincidental
+
+                </td>
+            </tr>
+        </tfoot>
+    </table>
 </body>
 </html>
